<resources>
    <string name="app_name">AppAlanPantalla</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="d">D</string>
    <string name="a">A</string>
    <string name="u">U</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="id">Id:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trabaja">Trabaja</string>
    <string name="sliderdedinero">sliderDeDinero</string>
    <string name="eur">€</string>
    <string name="emptyspaceformoneyslider">emptySpaceForMoneySlider</string>
</resources>